--- a/client/src/app/final-battle/final-battle.component.html
+++ b/client/src/app/final-battle/final-battle.component.html
@@ -1,5 +1,5 @@
 <div class="section">
-    <img src="https://res.cloudinary.com/dvr9t29vj/image/upload/v1742845541/FinalBattle2_ppgje9.png"
+    <img src="https://res.cloudinary.com/dvr9t29vj/image/upload/v1755610772/FinalBattle2_ppgje9.webp"
      alt="Final Battle Game" class="game-image">
     <p class="link-to-final-battle-game">
       <a href="https://iparalyze.itch.io/final-battle" target="_blank">Play Final Battle</a>
