--- a/client/src/app/hero/hero.component.css
+++ b/client/src/app/hero/hero.component.css
@@ -1,5 +1,6 @@
 
 .hero-container {
+  position:relative;
   width: 100%;
   height: 100%;
   padding-top: 120px;
@@ -37,9 +38,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 60%;
+    height: 100%;
     z-index: -1; /* Ensures it's behind the content */
-    border-bottom: 5px solid #232428;
+    border-bottom: 2.5px solid #232428;
     /* overflow: hidden; */ /* Hide video overflow */
   }
   
@@ -104,6 +105,11 @@
   .hero-container .col-md-6:last-child {
     padding-left: 30px !important; /* Add left padding on mobile */
     padding-right: 30px !important; /* Optional: add right padding for balance */
+    padding-top: 40px; /* Add top padding */
+  }
+  .waves-button {
+    top: 20%; /* or even 10%, depending on what looks best */
+    transform: translateY(0%) rotate(-90deg); /* Remove the vertical centering offset */
   }
 }
 
@@ -116,4 +122,12 @@
   width: 100%;
   min-height: 100%;
   object-fit: cover;
+}
+select {
+  background-color: transparent;
+  color: #232428; /* or any color that contrasts with your background */
+  border: none; /* remove border if you want */
+  outline: none; /* remove focus outline */
+  padding: 4px 8px; /* optional padding */
+  font-size: 1rem; /* adjust as needed */
 }
