--- a/client/src/app/monster-match/monster-match.component.html
+++ b/client/src/app/monster-match/monster-match.component.html
@@ -1,5 +1,5 @@
 <div class="section">
-    <img src="https://res.cloudinary.com/dvr9t29vj/image/upload/v1742845541/Definitive_Monster_Match2_ldlp5f.png" 
+    <img src="https://res.cloudinary.com/dvr9t29vj/image/upload/v1755610756/Definitive_Monster_Match2_ldlp5f.webp" 
     alt="Monster Match Game" class="game-image">
     <p class="link-to-final-battle-game">
       <a href="https://iparalyze.itch.io/the-monster-match" target="_blank">Play Monster Match</a>
