--- a/client/src/app/blog-page/blog-page.component.html
+++ b/client/src/app/blog-page/blog-page.component.html
@@ -1,5 +1,9 @@
 <div class="welcome">
     <h1>Welcome to my blog!</h1>
+     <!-- Background Video -->
+  <div class="video-container">
+    <div #backgroundVideoElement></div>
+  </div>
 </div>
 
 <div class="posts-container">
