--- a/client/src/app/final-battle/final-battle.component.html
+++ b/client/src/app/final-battle/final-battle.component.html
@@ -1,6 +1,7 @@
-<div class="section">
+<div class="page-wrapper">
+  <div class="section">
     <img src="https://res.cloudinary.com/dvr9t29vj/image/upload/v1755610772/FinalBattle2_ppgje9.webp"
-     alt="Final Battle Game" class="game-image">
+      alt="Final Battle Game" class="game-image">
     <p class="link-to-final-battle-game">
       <a href="https://iparalyze.itch.io/final-battle" target="_blank">Play Final Battle</a>
     </p>
@@ -8,3 +9,4 @@
       <a href="https://github.com/arinleviti/FinalBattleHighHopes40f1" target="_blank">GitHub Repository</a>
     </p>
   </div>
+</div>
