--- a/client/src/app/monster-match/monster-match.component.html
+++ b/client/src/app/monster-match/monster-match.component.html
@@ -1,3 +1,4 @@
+<div class="page-wrapper">
 <div class="section">
     <img src="https://res.cloudinary.com/dvr9t29vj/image/upload/v1755610756/Definitive_Monster_Match2_ldlp5f.webp" 
     alt="Monster Match Game" class="game-image">
@@ -8,3 +9,4 @@
       <a href="https://github.com/arinleviti/Match3GameProject" target="_blank">GitHub Repository</a>
     </p>
   </div>
+</div>
