--- a/client/src/app/blog-post/blog-post.component.css
+++ b/client/src/app/blog-post/blog-post.component.css
@@ -20,3 +20,11 @@
     font-size: 18px;
       font-weight: 300; /* Matches Bootstrap's .lead */
   }
+  .card-title h1 {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  .card-title p {
+    font-size: 1rem;
+    
+  }
