--- a/client/src/app/expertise/expertise.component.css
+++ b/client/src/app/expertise/expertise.component.css
@@ -30,20 +30,20 @@
 .section {
 
   text-align: left;
-  padding: 15px;
+  padding: 1rem;
   text-align: center;
 
 }
 
 .section h2 {
-  font-size: 30px;
+  font-size: 1.5rem;
   margin-bottom: 35px;
   
 }
 
 .section p {
   padding-bottom: 10px;
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: 300; /* Matches Bootstrap's .lead */
 }
 .logo {
