--- a/client/src/app/journey/journey.component.css
+++ b/client/src/app/journey/journey.component.css
@@ -1,17 +1,20 @@
 .section {
-    padding: 15px 0;
+    padding-top: 1rem;
     text-align: left;
-    padding-left: 15px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
   
   .section h2 {
-    font-size: 30px;
-    margin-bottom: 35px;
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
   }
   
   .section p {
-    padding-bottom: 10px;
-    font-size: 18px;
+    padding-bottom: 0rem;
+    font-size: 1rem;
     font-weight: 300; /* Matches Bootstrap's .lead */
+    text-align: center;
   }
   
