iframe uses netlify

--- a/client/src/app/nav-bar.component.html
+++ b/client/src/app/nav-bar.component.html
@@ -38,7 +38,7 @@
   <!-- Bot iframe (absolute/fullscreen) -->
    <div class="bot-iframe-container" [class.hidden]="!showBot">
       <iframe 
-        src="https://arin-bot.onrender.com" 
+        src="https://gleeful-trifle-936b5b.netlify.app/" 
         title="Arin Bot"
     frameborder="0">
   </iframe>
