removed heavy aftermath picture

--- a/client/src/app/expertise/expertise.component.html
+++ b/client/src/app/expertise/expertise.component.html
@@ -4,7 +4,7 @@
 
     <div class="section">
       <a href="https://red-rock-0e8252403-preview.westeurope.6.azurestaticapps.net/" target="_blank">
-        <img src="aftermathLogo.png" alt="Aftermath Logo" class="logo" />
+        <img src="aftermathLogoReduced.webp" alt="Aftermath Logo" class="logo" />
       </a>
       <h2><a href="https://red-rock-0e8252403-preview.westeurope.6.azurestaticapps.net/" target="_blank">Aftermath -
           Angular project</a></h2>
